--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -16,7 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "prisma": "^6.6.0"
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
+    "prisma": "^6.6.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
