--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -19,7 +19,8 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "prisma": "^6.6.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
