--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -19,7 +19,9 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.29",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.1",
     "prisma": "^6.6.0",
     "winston": "^3.17.0",
     "zod": "^3.24.3"
