--- a/BackEnd/.env.sample
+++ b/BackEnd/.env.sample
@@ -1,3 +1,14 @@
 PORT=
 DATABASE_URL=
 MAINTENANCE_MODE=
+MAILTRAP_HOST=
+MAILTRAP_PORT=
+MAILTRAP_USER=
+MAILTRAP_PASSWORD=
+MAILTRAP_SENDER_MAIL=
+BASE_URL=
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRY=
+JUDGE0_API_URI=
