--- a/BackEnd/.env.sample
+++ b/BackEnd/.env.sample
@@ -12,3 +12,6 @@ ACCESS_TOKEN_EXPIRY=
 REFRESH_TOKEN_SECRET=
 REFRESH_TOKEN_EXPIRY=
 JUDGE0_API_URI=
+CLOUDINARY_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
