--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^6.6.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.29",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
     "prisma": "^6.6.0",
     "winston": "^3.17.0",
