--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
     "prisma": "^6.6.0",
+    "slugify": "^1.6.6",
     "zod": "^3.24.3"
   },
   "devDependencies": {
